force-app/main/default/objects/Unbounce_Config__c/Unbounce_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchy custom setting for Unbounce webhook config. Used in tests; production uses Unbounce Config custom metadata.</description>
    <label>Unbounce Config</label>
</CustomObject>