force-app/main/default/objects/Unbounce_Config__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Required API key for public intake requests. Clients send it in the X-Api-Key header.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>