force-app/main/default/objects/Unbounce_Config__c/fields/Default_Case_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Case_Type_Name__c</fullName>
    <description>Default Case Type name for Unbounce intakes</description>
    <label>Default Case Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>