force-app/main/default/objects/Unbounce_Config__c/fields/Default_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Firm_Id__c</fullName>
    <description>Default Firm ID for Unbounce intakes</description>
    <label>Default Firm Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>