force-app/main/default/objects/Unbounce_Config__c/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <description>Secret for verifying Unbounce webhook signature</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>